-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1, 5.6
This seems to be a regression from 5.4: Index files no longer contain qml-module-name attribute for QML types (qmlclass element). As a result, links like \l QtQuick::Item::x are now failing (when linking across modules and not using single-exec mode).
| For Gerrit Dashboard: QTBUG-48479 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 126624,2 | qdoc: Fix a regression with QML node attributes written to index files | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |