qdoc: Fix a regression with QML node attributes written to index files

QDoc needs to write the following attributes to index files:

For qmlclass:  qml-module-name, qml-base-type
For qmlmodule: qml-module-name, qml-module-version

Because of a regression introduced in Qt 5.5, no QML module name
or base type information were written for QML types, resulting in
linking issues.

Change-Id: I69e616dadfc9ede389bc05e16acb831f1e15bac5
Task-number: QTBUG-48479
Reviewed-by: Martin Smith <martin.smith@digia.com>